<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nataliamartinez.taller_3corte.Registar">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrodecarros"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placa"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="57dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="18dp" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="88dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="146dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/txtPlaca"
        android:layout_alignLeft="@+id/txtPlaca"
        android:layout_alignStart="@+id/txtPlaca" />

    <Spinner
        android:id="@+id/cmxMarca"
        android:layout_width="244dp"
        android:layout_height="22dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="181dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:text="@string/Modelo"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="225dp"
        android:layout_below="@+id/cmxMarca"
        android:layout_alignLeft="@+id/cmxModelo"
        android:layout_alignStart="@+id/cmxModelo" />

    <Spinner
        android:id="@+id/cmxModelo"
        android:layout_width="246dp"
        android:layout_height="26dp"
        tools:layout_editor_absoluteY="261dp"
        tools:layout_editor_absoluteX="25dp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="304dp"
        android:layout_below="@+id/cmxColor"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="336dp"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="142dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button2"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:onClick="borrar"
        android:text="@string/borrar"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="410dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtPrecio"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="25dp"
        android:onClick="registar"
        android:text="@string/guardar"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/cmxModelo"
        android:layout_alignLeft="@+id/cmxModelo"
        android:layout_alignStart="@+id/cmxModelo" />

    <Spinner
        android:id="@+id/cmxColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_alignRight="@+id/cmxModelo"
        android:layout_alignEnd="@+id/cmxModelo" />

</RelativeLayout>
